embedded-interfaces/tests/compile_fail/enum_two_wildcards.rs
use embedded_interfaces::codegen::interface_objects;
interface_objects! {
    enum DoubleWild: u8{2} {
        0 A,
        _ B,
        _ C, // duplicate wildcard
    }
}
fn main() {}
